# world_cup_soccer_blog

./: .env-example  .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  orm.py  rate_limit.py  schemas.py  security.py  session.py
backend/app/db/: session.py
backend/app/schemas/: schemas.py
backend/openapi/: openapi.yaml
backend/openapi/components/schemas/: admin.yaml  auth.yaml  matches.yaml  players.yaml  shared.yaml  teams.yaml  tournaments.yaml
backend/openapi/paths/: admin.yaml  auth.yaml  health.yaml  matches.yaml  players.yaml  teams.yaml  tournaments.yaml
data_raw/raw/: wc_matches.csv  wc_players.csv
data_raw/samples/: wc_winners_10rows_test.csv
db/dml/: dml_complete.sql
db/migrations/: 000_extensions.sql  001_raw_staging.sql  002_public_tables.sql  003_w2_clean_columns.sql  003_warehouse.sql  004_audit_security.sql  005_w2_clean_columns.sql  006_add_columns.sql  007_referee_stadium.sql  008_players_entity.sql  009_tournament_teams.sql  010_auth_etl.sql
db/scripts/: run_dml.sh  run_migrations.sh
infra/: docker-compose.yml
infra/nginx/: Dockerfile  nginx.conf
infra/nginx/conf.d/: api-gateway.conf
tests/integration/: conftest.py  test_w1_ingest.py  test_w2_clean.py
workers/: Dockerfile  pyproject.toml
workers/src/worker/: cli.py
workers/src/worker/cleaning/: clean_w2.py
workers/src/worker/core/: config.py  db.py  storage.py
workers/src/worker/ingestion/: ingest_w1.py
workers/src/worker/loading/: load_w3.py
workers/src/worker/utils/: constants.py  helpers.py
workers/src/worker/validators/: rules.py  schemas.py
workers/tests/integration/: conftest.py  test_w1_ingest.py  test_w2_clean.py  test_w3_load.py
workers/tests/unit/: test_cli.py  test_helpers.py  test_rules.py  test_schemas.py
