[project]
name = "backend"
version = "0.1.0"
description = "FIFA World Cup Platform — FastAPI backend"
requires-python = ">=3.12"
authors = [{ name = "Platform Data Studio" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "slowapi>=0.1.9",
    "argon2-cffi>=25.1.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "pwdlib>=0.3.0",
    "fastapi-csrf-protect>=1.0.7",
    "secure>=2.0.1",
    "psycopg[binary]>=3.3.4",
    "aiocache>=0.12.3",
    "celery>=5.6.3",
    "aiokafka>=0.14.0",
    "aio-pika>=9.6.2",
    "sse-starlette>=3.4.4",
    "numpy>=2.4.6",
    "scikit-learn>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "ANN"]
per-file-ignores = { "tests/**" = ["S101", "ANN201", "ANN001", "ANN202"] }

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-v --cov=app --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "detect-secrets>=1.5.0",
    "pip-audit>=2.10.0",
    "types-redis>=4.6.0.20241004",
]
