[project]
name = "fifa-workers"
version = "0.1.0"
description = "FIFA World Cup Platform — FastAPI backend with OpenAPI contract"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Platform Data Studio" }]

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",   # ASGI server (with uvloop + httptools)

    # Database (async)
    "asyncpg>=0.29.0",             # async PostgreSQL driver
    "sqlalchemy[asyncio]>=2.0.0",  # ORM (async engine)
    "alembic>=1.13.0",             # migrations

    # Auth
    "python-jose[cryptography]>=3.3.0",  # JWT
    "passlib[argon2]>=1.7.4",            # argon2id password hashing
    "python-multipart>=0.0.9",           # form data (login form support)

    # Validation & config
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",

    # Observability
    "structlog>=24.1.0",
    "prometheus-fastapi-instrumentator>=6.1.0",

    # Rate limiting
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",          # async test client
    "factory-boy>=3.3.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.scripts]
fifa-worker = "worker.cli:main"
fifa-analysis = "worker.analysis.runner:main"

[dependency-groups]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E","F","I","N","UP","S","B","ANN"]
ignore  = ["ANN101","ANN102","S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-v --cov=app --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

# ─── Quick reference ──────────────────────────────────────────
# Install:
#   uv sync                     # all deps
#   uv sync --extra dev         # + dev deps
#
# Run:
#   uv run serve                            # dev (auto-reload)
#
# Test:
#   uv run pytest                           # all tests
#   uv run pytest tests/unit/ -v
#   uv run pytest tests/integration/ -v    # requires PG running
#
# OpenAPI contract:
#   http://localhost:8000/docs    (Swagger — dev only)
#   http://localhost:8000/redoc   (ReDoc)
#   http://localhost:8000/openapi.json
#
# Lint + format:
#   uv run ruff check . && uv run ruff format .